feat: added @action packages

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "turbo test"
   },
   "devDependencies": {
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
     "prettier": "^3.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.4.5"
