--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           npm test
       - name: Generate test report
-        uses: ./d
+        uses: ./
       - uses: actions/github-script@v7
         with:
           script: |
