--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,9 @@ jobs:
         run: |
           npm test
       - name: Generate test report
+        id: test_report
         uses: ./
+
       - uses: actions/github-script@v7
         with:
           script: |
@@ -31,5 +33,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for reporting!'
+              body: `${{steps.run_tests.outputs}}`
             })
