--- a/examples/turbo.json
+++ b/examples/turbo.json
@@ -10,6 +10,9 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "test": {
+      "dependsOn": []
+    },
     "dev": {
       "cache": false,
       "persistent": true
