chore: render some message on pr as a comment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,10 @@ jobs:
       - name: install dependencies
         run: |
           npm install
+          cd ./examples && npm install
       - name: test
         run: |
-          npm test
+          cd ./examples && npm test
       - name: Generate test report
         id: test_report
         uses: ./
