--- a/examples/apps/docs/package.json
+++ b/examples/apps/docs/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@repo/ui": "*",
@@ -17,11 +18,18 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "4.3.1",
+    "@vitest/coverage-v8": "2.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
-    "typescript": "^5"
+    "jsdom": "24.1.3",
+    "typescript": "^5",
+    "vitest": "2.1.2"
   }
 }
