--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
       - name: Generate test report
         id: test_report
         uses: ./
+        with:
+          rootDir: "./examples"
+          workspaces: |
+            apps
 
       - uses: actions/github-script@v7
         with:
@@ -33,5 +37,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `${{steps.test_report.outputs.coverage}}`
+              body: `${{steps.test_report.outputs.coverage_breakdown}}`
             })
