--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           rootDir: "./examples"
           workspaces: |
             apps
+            packages
 
       - uses: actions/github-script@v7
         with:
@@ -37,5 +38,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `${{steps.test_report.outputs.coverage_breakdown}}`
+              body: `${{steps.test_report.outputs.breakdown}}`
             })
