--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,18 @@ jobs:
         id: test_report
         uses: ./
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           rootDir: "./examples"
           workspaces: |
             apps
             packages
 
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `${{steps.test_report.outputs.breakdown}}`
-            })
+      # - uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       github.rest.issues.createComment({
+      #         issue_number: context.issue.number,
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         body: `${{steps.test_report.outputs.breakdown}}`
+      #       })
